# bingx-fetch-leverage-tiers

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test_leverage_tiers.py
.github/workflows/: publish.yml
bingx_leverages/: __init__.py  __main__.py  client.py  reference.py  validation.py
bingx_leverages/data/: tiers_from_website.csv
